# FCRM-Whatsapp

./: .gitignore  MANIFEST.in  README.md  hooks.py  mediasoup-signaling-server.js  package.json  pyproject.toml  requirements.txt  setup.py  test_implementation_standalone.py
frappe-bench/apps/whatsapp_calling/whatsapp_calling/bot/: ai_engine.py
frappe-bench/apps/whatsapp_calling/whatsapp_calling/doctype/whatsapp_business_account/: whatsapp_business_account.json  whatsapp_business_account.py
frappe-bench/apps/whatsapp_calling/whatsapp_calling/doctype/whatsapp_call_log/: whatsapp_call_log.json  whatsapp_call_log.py
frappe-bench/apps/whatsapp_calling/whatsapp_calling/public/js/: webrtc_client.js
mediasoup-server/: README.md  package.json
whatsapp_calling/: __init__.py  hooks.py  install.py  patches.txt
whatsapp_calling/calling/: webrtc_manager.py
whatsapp_calling/patches/v1_0/: create_default_settings.py  setup_whatsapp_fields.py
whatsapp_calling/public/css/: whatsapp_calling.css
whatsapp_calling/public/html/: janus.html
whatsapp_calling/public/js/: webrtc_client.js  whatsapp_tab.js
whatsapp_calling/tests/: __init__.py  test_requirements_implementation.py
whatsapp_calling/whatsapp_calling/: __init__.py
whatsapp_calling/whatsapp_calling/doctype/: __init__.py
whatsapp_calling/whatsapp_calling/doctype/bot_conversation_state/: __init__.py  bot_conversation_state.json  bot_conversation_state.py
whatsapp_calling/whatsapp_calling/doctype/janus_webrtc_settings/: __init__.py  api.py  janus_webrtc_settings.json  janus_webrtc_settings.py
whatsapp_calling/whatsapp_calling/doctype/mediasoup_webrtc_settings/: __init__.py  api.py  mediasoup_webrtc_settings.json  mediasoup_webrtc_settings.py
whatsapp_calling/whatsapp_calling/doctype/whatsapp_business_account/: __init__.py
whatsapp_calling/whatsapp_calling/doctype/whatsapp_call_log/: __init__.py
whatsapp_calling/whatsapp_calling/doctype/whatsapp_message/: __init__.py  whatsapp_message.json  whatsapp_message.py
whatsapp_calling/whatsapp_integration/: webhook_handler.py
